--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
 name = "homesick"
 version = "0.1.0"
+description = "Run applications with an ephemeral home directory"
+authors = ["Christian Duerr <contact@christianduerr.com>"]
+repository = "https://github.com/chrisduerr/homesec"
+rust-version = "1.84.0"
+license = "GPL-3.0"
 edition = "2021"
 
 [dependencies]
