Add support for encrypted home directories
This patch makes another attempt at automatically encrypting all files
written to the home directory by using gocryptfs instead of LUKS.

Since gocryptfs makes use of FUSE, it is possible to mount and unmount
filesystems without elevated privileges (ignoring the use of SUID by
applications like `umount`).

Since there's now two main operating modes, this patch also adds a small
argh-based CLI to pick the desired behavior.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "homesick"
+name = "homesec"
 version = "0.1.0"
 description = "Run applications with an ephemeral home directory"
 authors = ["Christian Duerr <contact@christianduerr.com>"]
@@ -9,5 +9,7 @@ license = "GPL-3.0"
 edition = "2021"
 
 [dependencies]
+argh = "0.1.12"
 home = "0.5.9"
-rustix = { version = "0.38.40", features = ["mount", "thread", "process", "fs"] }
+rustix = { version = "0.38.40", features = ["mount", "thread", "process", "fs", "termios"] }
+xdg = "2.5.2"
